# pycraft2

./: .dockerignore  .gitignore  LICENSE  Makefile  README.md  README.rst  pyproject.toml  tox.ini
.github/: pull_request_template.md
.github/workflows/: linter.yaml  python-package.yml
docker/: Dockerfile  docker-compose.yml
docs/source/: conf.py  index.rst  overview.rst
example/: bot_vs_ai.py  bot_vs_bot.py
pycraft2/: bot.py  client.py  controller.py  ladder.py  log.py  main.py  map.py  match.py  message.py  platform.py  player.py  port.py  runner.py  transport.py  util.py  websocket.py
pycraft2/s2clientprotocol/: common_pb2.py  common_pb2.pyi  data_pb2.py  data_pb2.pyi  debug_pb2.py  debug_pb2.pyi  error_pb2.py  error_pb2.pyi  query_pb2.py  query_pb2.pyi  raw_pb2.py  raw_pb2.pyi  sc2api_pb2.py  sc2api_pb2.pyi  score_pb2.py  score_pb2.pyi  spatial_pb2.py  spatial_pb2.pyi  ui_pb2.py  ui_pb2.pyi
requirements/: base.in  base.txt  dev.in  dev.txt  test.in  test.txt
scripts/: compile_protos.py  install_protoc.sh  protos.sh
test/: test_client.py  test_e2e.py  test_player.py  test_port.py  test_pytest.py  test_util.py
